[package]
name = "liuliget_bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
regex = "1.5.5"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
nipper = "0.1.9"
env_logger = "0.9.0"